# oop

./: .gitignore  .gitmodules
Segmentator/: CMakeLists.txt
Segmentator/lib/MST/include/: DSU.h
Segmentator/src/: GaussianFilter.cpp  GaussianFilter.h  GraphSegmentator.cpp  GraphSegmentator.h  ImageSegmentator.cpp  ImageSegmentator.h
Solitaire Klondike/: CMakeLists.txt  main.cpp
Solitaire Klondike/include/controller/: Controller.h
Solitaire Klondike/include/model/: CardContainer.h  CardContainerIterator.h  CardDeck.h  Foundation.h  FoundationStack.h
Solitaire Klondike/src/controller/: Controller.cpp
Solitaire Klondike/src/model/: CardContainer.cpp  CardContainerIterator.cpp  CardDeck.cpp  Foundation.cpp  FoundationStack.cpp  TableauStack.cpp  Waste.cpp
Solitaire Klondike/test/: ModelTest.cpp
block1/2darray/: Array2D.c  Array2D.h  CMakeLists.txt  main.c  tests_Array2D.c  tests_Array2D.h
block10/Comics/: CMakeLists.txt  main.cpp
block10/Comics/src/: CartoonFilter.cpp  CartoonFilter.h
block2/Factory/: CMakeLists.txt  objects
block2/Factory/src/: Factory.7z  circle.c  circle.h  line.c  line.h  main.c  new.c  new.h  objects.h  point.c  point.h  rect.c  rect.h
block2/Factory/test/: CMakeLists.txt  basic_test.cpp
block3/MedianFilter/: CMakeLists.txt  input
block3/MedianFilter/src/: MedianFilter.cpp  MedianFilter.h  main.cpp
block3/MedianFilter/test/: CMakeLists.txt  MedianFilterTests.cpp
block3/MinimumSpanningTree/: CMakeLists.txt  input  output
block3/MinimumSpanningTree/src/: DSU.cpp  DSU.h  MST.cpp  MST.h  main.cpp
block3/MinimumSpanningTree/test/: CMakeLists.txt  KruskalTests.cpp  test1  test10  test11  test3  test4  test6  test7  test8  test9  test_disconnected2
block3/SumInDifferentNotations/: CMakeLists.txt
block3/SumInDifferentNotations/src/: DiffRadixPlus.cpp  DiffRadixPlus.h  RadixTranslation.cpp  RadixTranslation.h  main.cpp
block3/SumInDifferentNotations/test/: CMakeLists.txt  DiffRadixPlus_test.cpp  RadixTranslation_test.cpp
block4/BackgroundRemover/: CMakeLists.txt
block4/BackgroundRemover/src/: BackgroundRemover.cpp  BackgroundRemover.h  BalancedHistogramThresholder.cpp  BalancedHistogramThresholder.h  GaussianFilter.cpp  GaussianFilter.h  IntensityHistogramCalculator.cpp  IntensityHistogramCalculator.h  LuminosityHistogram.cpp  LuminosityHistogram.h  MainWindow.cpp  MainWindow.h  WrongChannelsAmountException.h  main.cpp  mainwindow.ui
block4/BackgroundRemover/test/: CMakeLists.txt  GaussianTest.cpp
block4/Checksum/: CMakeLists.txt  manifest_
block4/Checksum/src/: ArgumentsParser.cpp  ArgumentsParser.h  Checksum.cpp  Checksum.h  ManifestReader.cpp  ManifestReader.h  ManifestWriter.cpp  ManifestWriter.h  main.cpp
block4/Checksum/test/: ArgumentParser_test.cpp  CMakeLists.txt  Checksum_test.cpp  ManifestReadWrite_test.cpp
block4/TopoSorter/: CMakeLists.txt
block4/TopoSorter/lib/libtokenizer/: Tokenizer.h
block4/TopoSorter/src/: TopoSorter.cpp  TopoSorter.h  TopoSorterParser.cpp  TopoSorterParser.h  main.cpp
block4/TopoSorter/test/: CMakeLists.txt  toposorter_test.cpp
block5/SolitaireKlondike/: CMakeLists.txt
block5/SolitaireKlondike/include/: Card.h  CardContainer.h  CardDeck.h  Foundation.h  FoundationStack.h  Tableau.h  TableauStack.h  Waste.h
block5/SolitaireKlondike/src/: CardContainer.cpp  CardDeck.cpp  Foundation.cpp  FoundationStack.cpp  Tableau.cpp  TableauStack.cpp  Waste.cpp
block5/SolitaireKlondike/test/: ModelTest.cpp
block5/TotalControl/: CMakeLists.txt
block5/TotalControl/include/: Crowd.h  CrowdFinder.h  Location.h  Timestamp.h  User.h  VisitsListReader.h
block5/TotalControl/src/: Crowd.cpp  Crowd.h  CrowdFinder.cpp  CrowdFinder.h  Location.cpp  Location.h  LocationsSplitter.cpp  LocationsSplitter.h  Timestamp.cpp  Timestamp.h  User.cpp  User.h  VisitsListReader.cpp  VisitsListReader.h
block5/TotalControl/test/: CMakeLists.txt  CrowdFinder_test.cpp  CrowdMaxAvg_test.cpp  LocationsSplitter_test.cpp  Timestamp_test.cpp  VisitsListReader_test.cpp
block7/RadixSort/: CMakeLists.txt
block7/RadixSort/include/: RadixSort.hpp
block7/ShuffleIterator/: CMakeLists.txt
block7/ShuffleIterator/include/: shuffle_range.h
block7/ShuffleIterator/src/: main.cpp
block7/ShuffleIterator/test/: CMakeLists.txt  shuffle_range_test.cpp
block7/StaticAssert/: CMakeLists.txt
block7/StaticAssert/include/: StaticAssert.hpp
block7/StaticAssert/test/: CMakeLists.txt  StaticAssertTest.cpp
block8/MyVariant/: CMakeLists.txt  main.cpp
block8/MyVariant/include/: variant.hpp
block8/MyVariant/test/: CMakeLists.txt
block8/ObjectPool/: CMakeLists.txt
block8/ObjectPool/include/: ObjectPool.hpp
block8/ObjectPool/src/: main.cpp
block8/ObjectPool/test/: CMakeLists.txt  ObjectPoolTest.cpp
block8/Trie/: CMakeLists.txt
block8/Trie/include/: Trie.hpp
block8/Trie/src/: main.cpp
block8/Trie/test/: CMakeLists.txt  TrieTest.cpp
block9/C++HTMLLinter/: CMakeLists.txt  main.html
block9/C++HTMLLinter/include/: CodeReviewDecorator.cpp  CodeReviewDecorator.h  CppDecorator.cpp  CppDecorator.h  HTMLDecorator.cpp  HTMLDecorator.h  IWritable.h  IWritableDecorator.h  LineDecorator.cpp  LineDecorator.h  WordFinder.cpp  WordFinder.h  Writable.cpp  Writable.h
block9/C++HTMLLinter/src/: CodeReviewDecorator.cpp  CppDecorator.cpp  HTMLDecorator.cpp  LineDecorator.cpp  WordFinder.cpp  Writable.cpp  main.cpp
block9/Cache/: CMakeLists.txt  cache97  cache98
block9/Cache/include/: Cache.cpp  Cache.h
block9/Cache/src/: Cache.cpp
block9/Cache/test/: CMakeLists.txt  CacheApplierTest.cpp  CacheTest.cpp
tokenizer/: CMakeLists.txt  Tokenizer.cpp
